(feat): add in boost button to posts

--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
@@ -67,4 +67,20 @@ m-activity__toolbar {
       }
     }
   }
+
+  .m-boostButton {
+    width: auto;
+    height: auto;
+    min-width: unset;
+
+    font-weight: 500;
+    padding: 0;
+
+    &,
+    &:hover {
+      @include m-theme() {
+        border: 0;
+      }
+    }
+  }
 }
