--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -8,8 +8,21 @@
   *ngIf="!service.displayOptions.showComments"
 ></minds-button-comment>
 
+<!-- Show wire if not own post -->
 <ng-container *ngIf="session.getLoggedInUser().guid != entity.ownerObj.guid">
   <div class="m-layout__spacer"></div>
 
   <m-wire-button [object]="entity"></m-wire-button>
+</ng-container>
+
+<!-- Show boost if own post -->
+<ng-container *ngIf="session.getLoggedInUser().guid == entity.ownerObj.guid">
+  <div class="m-layout__spacer"></div>
+
+  <button
+    class="m-btn m-btn--action m-btn--slim m-boostButton"
+    (click)="openBoostModal($event)"
+  >
+    <span i18n="verb|@@M__ACTION__BOOST">Boost</span>
+  </button>
 </ng-container>
