(feat): ability to hide comments when expanded

--- a/src/app/modules/comments/entity-outlet/entity-outlet.component.html
+++ b/src/app/modules/comments/entity-outlet/entity-outlet.component.html
@@ -1,3 +1,11 @@
+<div
+  class="m-commentsEntityOutlet__expand--hide"
+  *ngIf="count > 0 && !showOnlyPoster"
+  (click)="showOnlyPoster = true"
+>
+  Hide comments
+</div>
+
 <m-comments__tree
   *ngIf="!showOnlyPoster"
   [entity]="entity"
