--- a/src/app/modules/blockchain/marketing/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/rewards.component.html
@@ -43,9 +43,7 @@
         class="m-grid__column-5 m-grid__column-12--mobile m-marketing__image"
       >
         <span>
-          <img
-            [src]="cdnAssetsUrl + 'assets/product-pages/rewards/rewards-1.jpg'"
-          />
+          <img [src]="cdnAssetsUrl + 'assets/product-pages/pro/pro-2.jpg'" />
         </span>
       </div>
     </div>
