--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -55,11 +55,11 @@
   <li *ngFor="let group of groups" [class.has-marker]="group.hasMarker">
     <a
       class="m-groupSidebarMarkersList__item"
+      [class.has-gathering]="group.hasGathering$ | async"
       [routerLink]="['/groups/profile', group.guid]"
     >
       <m-tooltip [anchor]="tooltipsAnchor" [useParentPosition]="true">
         <img
-          [class.m-pulsating--small]="group.hasGathering$ | async"
           [src]="'fs/v1/avatars/' + group.guid + '/' + group.icontime"
           m-tooltip--anchor
         />
