--- a/src/app/modules/suggestions/sidebar.component.scss
+++ b/src/app/modules/suggestions/sidebar.component.scss
@@ -91,6 +91,8 @@
     }
     .m-btn {
       height: 30px;
+      width: 30px;
+      padding: 0;
       font-size: 10px;
       letter-spacing: 1px;
       -webkit-font-smoothing: antialiased;
