(fix): use new activity posts on groups

--- a/src/app/modules/groups/profile/feed/sorted.component.scss
+++ b/src/app/modules/groups/profile/feed/sorted.component.scss
@@ -3,3 +3,7 @@
     margin-left: auto;
   }
 }
+
+m-group-profile-feed__sorted m-activity {
+  margin-bottom: 20px; // TODO: make this a constant
+}
