--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -53,42 +53,58 @@
       </a>
     </ng-container>
 
-    <ng-container
-      *ngIf="['images', 'videos'].indexOf(type) > -1; else entityListView"
-    >
-      <m-newsfeed__tiles
-        [entities]="feedsService.feed | async"
-      ></m-newsfeed__tiles>
-    </ng-container>
-    <ng-template #entityListView>
+    <ng-container *mIfFeature="'navigation'; legacyActivity">
       <ng-container
-        *ngFor="let entity of feedsService.feed | async; let i = index"
+        *ngFor="let entity$ of feedsService.feed | async; let i = index"
       >
-        <minds-activity
-          *ngIf="entity | async"
-          class="mdl-card item"
-          [object]="entity | async"
-          [canDelete]="group['is:owner'] || group['is:moderator']"
-          (deleted)="delete($event)"
-          [slot]="i + 1"
-          [attr.data-minds-activity-guid]="entity.guid"
-          [disableBoosting]="group['membership'] === 0"
-          [disableReminding]="group['membership'] === 0"
+        <m-activity
+          *ngIf="entity$ | async as entity"
+          [entity]="entity"
+          [displayOptions]="{
+            showOnlyCommentsInput: true
+          }"
           [allowAutoplayOnScroll]="true"
-        >
-          <!-- Menu Actions -->
-
-          <li
-            post-menu
-            class="mdl-menu__item"
-            *ngIf="group['is:owner'] && (entity | async)"
-            (click)="kick(entity?.ownerObj)"
-            i18n="@@GROUPS__PROFILE__FEED__REMOVE_USER"
-          >
-            Remove user
-          </li>
-        </minds-activity>
+        ></m-activity>
       </ng-container>
+    </ng-container>
+    <ng-template #legacyActivity>
+      <ng-container
+        *ngIf="['images', 'videos'].indexOf(type) > -1; else entityListView"
+      >
+        <m-newsfeed__tiles
+          [entities]="feedsService.feed | async"
+        ></m-newsfeed__tiles>
+      </ng-container>
+      <ng-template #entityListView>
+        <ng-container
+          *ngFor="let entity of feedsService.feed | async; let i = index"
+        >
+          <minds-activity
+            *ngIf="entity | async"
+            class="mdl-card item"
+            [object]="entity | async"
+            [canDelete]="group['is:owner'] || group['is:moderator']"
+            (deleted)="delete($event)"
+            [slot]="i + 1"
+            [attr.data-minds-activity-guid]="entity.guid"
+            [disableBoosting]="group['membership'] === 0"
+            [disableReminding]="group['membership'] === 0"
+            [allowAutoplayOnScroll]="true"
+          >
+            <!-- Menu Actions -->
+
+            <li
+              post-menu
+              class="mdl-menu__item"
+              *ngIf="group['is:owner'] && (entity | async)"
+              (click)="kick(entity?.ownerObj)"
+              i18n="@@GROUPS__PROFILE__FEED__REMOVE_USER"
+            >
+              Remove user
+            </li>
+          </minds-activity>
+        </ng-container>
+      </ng-template>
     </ng-template>
 
     <infinite-scroll
