--- a/src/app/modules/groups/profile/profile.component.scss
+++ b/src/app/modules/groups/profile/profile.component.scss
@@ -231,6 +231,14 @@ m-groups--profile .m-group__grid header {
 }
 
 .m-theme__2020 {
+  .m-group__infoWrapper,
+  .m-group__feeds {
+    margin: 0 40px; // TODO: make constant
+
+    @media screen and (max-width: $layoutMax2ColWidth) {
+      margin: 0;
+    }
+  }
   .m-groupGrid__toggleBtn {
     top: 75px;
   }
