Upgraded password reset form #2744

--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -1,128 +1,143 @@
-<div class="mdl-grid" style="max-width:360px">
-  <div class="mdl-cell mdl-cell--12-col" [hidden]="!error">
-    <div
-      class="mdl-card mdl-color--red-500 mdl-color-text--blue-grey-50  mdl-shadow--2dp minds-login-box"
-      style="min-height:0;"
-    >
-      <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
-        {{ error }}
-      </div>
-    </div>
-  </div>
+<div class="m-grid">
+  <div
+    class="m-grid__column-8 m-grid__column__skip-3 m-grid__column-10--tablet m-grid__column__skip-2--tablet m-grid__column-12--mobile m-grid__column__skip-1--mobile"
+  >
+    <div class="m-forgot-password__wrapper">
+      <div class="m-forgot-password__modal">
+        <div class="m-forgot-password--step1">
+          <div class="m-forgot-password--step-1" *ngIf="step == 1">
+            <div class="m-forgot-password__formWrapper">
+              <div class="m-forgot-password__header">
+                <h3 class="ng-star-inserted">Reset Your Password</h3>
+                <span
+                  class="m-forgot-password__secondaryText"
+                  i18n="
+                     @@MINDS__HOME__FORGOT_PASSWORD__ENTER_USERNAME_HELP_NOTE
+                  "
+                >
+                  To request a new password, enter your username
+                </span>
+              </div>
+              <div class="m-forgot-password__form">
+                <div
+                  class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                  [mdl]
+                >
+                  <input
+                    class="mdl-textfield__input"
+                    type="text"
+                    id="username"
+                    #username
+                    (keydown.enter)="request(username)"
+                    data-cy="data-minds-forgot-password-input"
+                  />
+                  <label
+                    class="mdl-textfield__label"
+                    for="username"
+                    i18n="@@M__COMMON__USERNAME"
+                    >Username</label
+                  >
+                </div>
+                <button
+                  class="mf-button mf-button--alt ng-star-inserted"
+                  (click)="request(username)"
+                  [disabled]="inProgress"
+                  i18n="@@M__ACTION__CONTINUE"
+                  data-cy="data-minds-forgot-password-submit"
+                >
+                  Continue
+                </button>
+              </div>
+            </div>
+          </div>
 
-  <div class="mdl-cell mdl-cell--12-col">
-    <div
-      class="mdl-card mdl-shadow--2dp m-forgot-password--step-1"
-      *ngIf="step == 1"
-    >
-      <div class="mdl-card__supporting-text">
-        <ng-container
-          i18n="@@MINDS__HOME__FORGOT_PASSWORD__ENTER_USERNAME_HELP_NOTE"
-        >
-          To request a new password, enter your username
-        </ng-container>
+          <div class="m-forgot-password--step-2" *ngIf="step == 2">
+            <div
+              class="m-forgot-password__header"
+              i18n="@@MINDS__HOME__FORGOT_PASSWORD__UNLOCK_CODE_SENT"
+            >
+              <h3 class="ng-star-inserted ">Password Reset Email Sent</h3>
+              <span class="m-forgot-password__secondaryText">
+                We have sent an unlock code to your registered email address.
+              </span>
+            </div>
+            <div class="m-forgot-password__iconContainer">
+              <i class="material-icons">email</i>
+            </div>
+          </div>
 
-        <div
-          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          [mdl]
-        >
-          <input
-            class="mdl-textfield__input"
-            type="text"
-            id="username"
-            #username
-            (keydown.enter)="request(username)"
-          />
-          <label
-            class="mdl-textfield__label"
-            for="username"
-            i18n="@@M__COMMON__USERNAME"
-            >Username</label
-          >
+          <div class="m-forgot-password--step-3" *ngIf="step == 3">
+            <h3 class="ng-star-inserted">Enter Your New Password</h3>
+
+            <div class="m-forgot-password__form">
+              <div
+                class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                [mdl]
+              >
+                <input
+                  class="mdl-textfield__input"
+                  type="password"
+                  id="password"
+                  #password
+                  data-cy="data-minds-forgot-password-text-input-1"
+                />
+                <label
+                  class="mdl-textfield__label"
+                  for="password"
+                  i18n="@@M__COMMON__PASSWORD"
+                  >Password</label
+                >
+              </div>
+              <div></div>
+
+              <div
+                class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                [mdl]
+              >
+                <input
+                  class="mdl-textfield__input"
+                  type="password"
+                  id="password2"
+                  #password2
+                  (keydown.enter)="
+                    password == password2 ? reset(password2) : null
+                  "
+                  data-cy="data-minds-forgot-password-text-input-2"
+                />
+                <label
+                  class="mdl-textfield__label"
+                  for="password2"
+                  i18n="@@MINDS__HOME__FORGOT_PASSWORD__CONFIRM_PASSWORD_LABEL"
+                  >Password (confirm)
+                </label>
+              </div>
+              <div class="m-forgot-password__singleButtonWrapper">
+                <button
+                  class="mf-button mf-button--alt ng-star-inserted"
+                  (click)="reset(password2)"
+                  [disabled]="inProgress"
+                  i18n="@@MINDS__HOME__FORGOT_PASSWORD__RESET_ACTION"
+                  data-cy="data-minds-forgot-password-submit"
+                >
+                  Reset
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="m-forgot-password--error" [hidden]="!error">
+            <div
+              class="m-forgot-password--error__container"
+              style="min-height:0;"
+            >
+              <div
+                class="m-forgot-password--error__text"
+                data-cy="data-minds-forgot-password-error"
+              >
+                {{ error }}
+              </div>
+            </div>
+          </div>
         </div>
-        <button
-          class="m-btn m-btn--action"
-          (click)="request(username)"
-          [disabled]="inProgress"
-          i18n="@@M__ACTION__CONTINUE"
-        >
-          Continue
-        </button>
-      </div>
-    </div>
-
-    <div
-      class="mdl-card mdl-color--blue-grey-500 mdl-color-text--blue-grey-50 mdl-shadow--2dp m-forgot-password--step-2"
-      *ngIf="step == 2"
-    >
-      <div
-        class="mdl-card__supporting-text"
-        i18n="@@MINDS__HOME__FORGOT_PASSWORD__UNLOCK_CODE_SENT"
-      >
-        We have sent an unlock code to your registered email address.
-      </div>
-    </div>
-
-    <div
-      class="mdl-card mdl-color--blue-grey-500 mdl-color-text--blue-grey-50 mdl-shadow--2dp m-forgot-password--step-3"
-      *ngIf="step == 3"
-    >
-      <div
-        class="mdl-card__supporting-text  mdl-color-text--blue-grey-50"
-        i18n="@@MINDS__HOME__FORGOT_PASSWORD__ENTER_NEW_PASSWORD_HELP_NOTE"
-      >
-        Please enter your new password
-      </div>
-
-      <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
-        <div
-          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          [mdl]
-        >
-          <input
-            class="mdl-textfield__input"
-            type="password"
-            id="password"
-            #password
-          />
-          <label
-            class="mdl-textfield__label mdl-color-text--blue-grey-50"
-            for="password"
-            i18n="@@M__COMMON__PASSWORD"
-            >Password</label
-          >
-        </div>
-        <div></div>
-
-        <div
-          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          [mdl]
-        >
-          <input
-            class="mdl-textfield__input"
-            type="password"
-            id="password2"
-            #password2
-            (keyup)="validatePassword(password2)"
-            (keydown.enter)="password == password2 ? reset(password2) : null"
-          />
-          <label
-            class="mdl-textfield__label mdl-color-text--blue-grey-50"
-            for="password2"
-            i18n="@@MINDS__HOME__FORGOT_PASSWORD__CONFIRM_PASSWORD_LABEL"
-            >Password (confirm)
-          </label>
-        </div>
-        <div></div>
-
-        <button
-          class="mdl-button mdl-button--raised mdl-color--blue-grey-200"
-          (click)="reset(password2)"
-          [disabled]="inProgress"
-          i18n="@@MINDS__HOME__FORGOT_PASSWORD__RESET_ACTION"
-        >
-          Reset
-        </button>
       </div>
     </div>
   </div>
