--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -63,7 +63,11 @@
 <div class="m-login__title">
   <h3 *ngIf="showTitle">Login to Minds</h3>
 
-  <a *ngIf="showTitle" [routerLink]="['/forgot-password']">
+  <a
+    *ngIf="showTitle"
+    [routerLink]="['/forgot-password']"
+    data-cy="data-minds-forgot-password-button"
+  >
     Forgot your Password?
   </a>
 </div>
@@ -162,9 +166,10 @@
       class="mdl-card__subtitle-text mdl-color-text--blue-grey-300 m-reset-password-link"
       [routerLink]="['/forgot-password']"
       *ngIf="!showTitle"
+      data-cy="data-minds-forgot-password-button"
     >
-      <ng-container i18n="@@FORMS__LOGIN__FORGOT_PASSWORD_LINK"
-        >Forgot Password?
+      <ng-container i18n="@@FORMS__LOGIN__FORGOT_PASSWORD_LINK">
+        Forgot Password?
       </ng-container>
     </a>
   </div>
