(feat): add pinned posts and tags

--- a/src/app/common/components/post-menu/v2/menu.component.html
+++ b/src/app/common/components/post-menu/v2/menu.component.html
@@ -34,6 +34,26 @@
     </li>
     <li
       class="m-dropdownList__item"
+      *ngIf="
+        options.indexOf('pin') !== -1 && (service.isPinned$ | async) === false
+      "
+      (click)="onSelectedOption('pin')"
+      i18n="@@M__ACTION__PIN"
+    >
+      Pin
+    </li>
+    <li
+      class="m-dropdownList__item"
+      *ngIf="
+        options.indexOf('pin') !== -1 && (service.isPinned$ | async) === true
+      "
+      (click)="onSelectedOption('pin')"
+      i18n="@@M__ACTION__PIN"
+    >
+      Remove pin
+    </li>
+    <li
+      class="m-dropdownList__item"
       *ngIf="options.indexOf('translate') !== -1 && isTranslatable"
       (click)="onSelectedOption('translate')"
       i18n="@@M__ACTION__TRANSLATE"
