--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -1,6 +1,17 @@
 <m-activity__ownerBlock *ngIf="service.displayOptions.showOwnerBlock">
   <ng-container class="m-activityOwnerBlock__right">
     <m-activity__metrics></m-activity__metrics>
+
+    <ng-container *ngIf="entity$ | async as entity">
+      <span
+        *ngIf="entity.pinned"
+        class="m-activity__flag m-activity__flag--pinned"
+        data-cy="m-activity__pinnedFlag"
+      >
+        <span>Pinned</span>
+      </span>
+    </ng-container>
+
     <m-activity__menu (deleted)="delete()"></m-activity__menu>
   </ng-container>
 </m-activity__ownerBlock>
