(fix): groups regression

--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -53,7 +53,7 @@
       </a>
     </ng-container>
 
-    <ng-container *mIfFeature="'navigation'; legacyActivity">
+    <ng-container *mIfFeature="'navigation'; else legacyActivity">
       <ng-container
         *ngFor="let entity$ of feedsService.feed | async; let i = index"
       >
