(fix): new navigation border still persists on topbar

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -104,7 +104,7 @@
         @include m-theme() {
           border-right: 1px solid themed($m-borderColor--primary);
         }
-        @media screen and(max-width: $layoutMax2ColFixedWidth) {
+        @media screen and(max-width: $layoutMin3ColWidth) {
           @include m-theme() {
             border-right: 0;
           }
