(feat): update upgrades text

--- a/src/app/modules/upgrades/upgrades.component.html
+++ b/src/app/modules/upgrades/upgrades.component.html
@@ -11,8 +11,7 @@
         </h2>
 
         <p class="m-marketing__description" i18n>
-          Minds offers a unique range of powerful upgrades that will supercharge
-          your Minds experience.
+          Unlock powerful features to supercharge your channel.
         </p>
 
         <ul class="m-marketing__points">
