--- a/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
+++ b/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
@@ -12,18 +12,18 @@
     <div class="m-form__field--checkbox stretchedField">
       <div class="m-form__row--input">
         <label
-          for="video_autoplay"
+          for="autoplay_videos"
           class="m-form__customInputWrapper__checkbox"
           [ngClass]="{ readonly: !isPlus }"
           i18n
           >Enable video autoplay
           <input
             type="checkbox"
-            id="video_autoplay"
-            name="video_autoplay"
-            formControlName="video_autoplay"
+            id="autoplay_videos"
+            name="autoplay_videos"
+            formControlName="autoplay_videos"
             class="form-control"
-            data-minds="video_autoplay"
+            data-minds="autoplay_videos"
             [readonly]="inProgress || !init || !isPlus"
           />
           <span class="m-form__customInput__checkbox"></span>
