(fix): newsfeed margins being applied to old styling - closes #2769

--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -5,7 +5,9 @@
 <minds-button-comment
   [object]="entity"
   (click)="toggleComments()"
-  *ngIf="!service.displayOptions.showComments"
+  *ngIf="
+    !service.displayOptions.showComments || service.displayOptions.showComments
+  "
 ></minds-button-comment>
 
 <!-- Show wire if not own post -->
