--- a/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
@@ -101,7 +101,7 @@
         }}</span
         ><span
           class="m-walletBalance--cash__colVal--frac"
-          *ngIf="pendingBalance.frac"
+          *ngIf="proEarnings.frac"
           >.{{ proEarnings.frac }}</span
         >
       </div>
