--- a/src/app/modules/wallet/v2/eth/settings/settings-eth.component.html
+++ b/src/app/modules/wallet/v2/eth/settings/settings-eth.component.html
@@ -26,7 +26,7 @@
       </p>
       <p class="m-walletSettings--eth__balanceVal">{{ ethWallet.balance }}</p>
     </div>
-    <m-shadowboxSubmitButton [routerLink]="['/token', { purchaseEth: 'open' }]">
+    <m-shadowboxSubmitButton routerLink="['/token', { purchaseEth: 'open' }]">
       Buy Ether
     </m-shadowboxSubmitButton>
   </div>
