--- a/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.scss
+++ b/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.scss
@@ -6,7 +6,7 @@ m-walletBalance--tokens {
     font-size: 15px;
     line-height: 20px;
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
     }
   }
   .m-walletBalance--tokens__equationWrapper {
@@ -16,19 +16,20 @@ m-walletBalance--tokens {
   .m-walletBalance--tokens__equationLeft {
     display: flex;
     flex-flow: row wrap;
+    @media screen and (max-width: $max-mobile) {
+      max-width: 56px;
+    }
   }
   .m-walletBalance--tokens__buyButtonWrapper {
-    cursor: default;
-    min-width: 105px;
-    m-shadowboxSubmitButton {
-      margin-left: 36px;
-    }
+    margin-top: 6px;
   }
   .m-walletBalance--tokens__balanceTitle {
     position: relative;
     m-tooltip {
       position: relative;
       margin-left: 4px;
+      vertical-align: top;
+
       .m-tooltip {
         margin: 0;
       }
@@ -48,9 +49,16 @@ m-walletBalance--tokens {
     }
   }
   .m-walletBalance--tokens__balanceWrapper--total {
+    margin-right: 22px;
     .m-walletBalance--tokens__balanceTitle {
       font-size: 16px;
       line-height: 21px;
+      @media screen and (max-width: $max-mobile) {
+        max-width: 56px;
+      }
+    }
+    .m-walletBalance--tokens__balanceValWrapper {
+      margin-top: 3px;
     }
     .m-walletBalance--tokens__balanceVal--int {
       font-size: 24px;
@@ -63,8 +71,9 @@ m-walletBalance--tokens {
   }
 
   .m-walletBalance--tokens__balanceWrapper--subtotal {
+    margin-top: 4px;
     .m-walletBalance--tokens__balanceTitle {
-      min-width: 78px;
+      min-width: 72px;
     }
     .m-walletBalance--tokens__balanceValWrapper {
       font-size: 13px;
@@ -87,17 +96,18 @@ m-walletBalance--tokens {
   }
   .m-walletBalance--tokens__balanceValWrapper {
     font-weight: 500;
-    margin-top: 8px;
+    margin-top: 4px;
   }
   .m-walletBalance--tokens__balanceVal--int {
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
     }
   }
 
   .m-walletBalance--tokens__equationSymbol {
-    align-self: center;
-    margin-bottom: 36px;
+    // align-self: center;
+    // margin-bottom: 10px;
+    margin-top: 12px;
     font-size: 20px;
     line-height: 23px;
   }
@@ -106,23 +116,34 @@ m-walletBalance--tokens {
     font-weight: 300;
     text-decoration: underline;
     cursor: pointer;
+
+    @media screen and (max-width: 1000px) {
+      max-width: 70px;
+    }
   }
 
-  .m-walletBalance--tokens__learnMore {
+  .m-walletBalance--tokens__payout {
     font-size: 14px;
     line-height: 19px;
-    margin-top: 38px;
-  }
-  .m-walletBalance--tokens__payout {
-    font-size: 12px;
-    line-height: 16px;
-    margin-top: 10px;
+    margin-top: 42px;
+    > div {
+      display: inline-block;
+      margin-bottom: 2px;
+      &:first-child {
+        margin-right: 4px;
+      }
+    }
   }
   .m-walletBalance--tokens__payoutEstimate {
     font-weight: 500;
     @include m-theme() {
-      color: themed($m-grey-500);
+      color: themed($m-textColor--secondary);
     }
+  }
+  .m-walletBalance--tokens__learnMore {
+    font-size: 12px;
+    line-height: 19px;
+    margin-top: 24px;
   }
 
   m-shadowboxSubmitButton {
@@ -142,14 +163,11 @@ m-walletBalance--tokens {
     .m-walletBalance--tokens__equationLeft {
       flex-direction: column;
     }
-    .m-walletBalance--tokens__buyButtonWrapper {
-      m-shadowboxSubmitButton {
-        margin-left: 0;
-        margin-top: 22px;
-      }
+
+    .m-walletBalance--tokens__balanceWrapper--total {
+      margin-bottom: 16px;
+      margin-right: 0;
     }
-  }
-  @media screen and (max-width: $min-tablet) {
   }
 
   @media screen and (max-width: $max-mobile) {
