--- a/src/app/common/components/shadowbox-header-tabs/shadowbox-header-tabs.component.scss
+++ b/src/app/common/components/shadowbox-header-tabs/shadowbox-header-tabs.component.scss
@@ -11,7 +11,7 @@
     border-bottom: 8px solid transparent;
   }
   @include m-theme() {
-    color: themed($m-grey-300);
+    color: themed($m-textColor--tertiary);
   }
   &.active {
     @include m-theme() {
@@ -46,7 +46,7 @@
       i {
         font-size: 12px;
         @include m-theme() {
-          color: rgba(themed($m-grey-300), 0.7);
+          color: rgba(themed($m-textColor--tertiary), 0.7);
         }
       }
       .m-tooltip--bubble {
@@ -65,7 +65,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
     }
   }
   .m-shadowboxHeaderTab__delta {
