--- a/src/app/common/components/shadowbox-header/shadowbox-header.component.scss
+++ b/src/app/common/components/shadowbox-header/shadowbox-header.component.scss
@@ -75,6 +75,9 @@ m-body.has-v3-navbar {
         themed($m-bgColor--primary) 50%
       );
     }
+    &.visible {
+      width: 36px;
+    }
   }
   &.visible {
     opacity: 1;
@@ -97,9 +100,9 @@ m-body.has-v3-navbar {
     opacity: 1;
   }
   @include m-theme() {
-    background-color: themed($m-white);
-    box-shadow: 0px 0px 10px -3px rgba(themed($m-black-always), 0.3);
-    border: 1px solid themed($m-white);
+    background-color: themed($m-bgColor--primary);
+    box-shadow: 0px 0px 10px -3px rgba(themed($m-black), 0.3);
+    border: 1px solid themed($m-bgColor--primary);
   }
   &:hover {
     @include m-theme() {
@@ -110,11 +113,11 @@ m-body.has-v3-navbar {
     right: -12;
   }
   &.m-shadowboxHeader__overflowScrollButton--left {
-    left: -12;
+    left: 12;
   }
   i {
     @include m-theme() {
-      color: themed($m-grey-200);
+      color: themed($m-textColor--secondary);
     }
   }
 }
