--- a/src/app/modules/analytics/v2/dashboard.component.scss
+++ b/src/app/modules/analytics/v2/dashboard.component.scss
@@ -59,7 +59,7 @@ m-analytics__dashboard {
   }
 }
 .m-analyticsDashboard__description {
-  margin: 8px 16px 32px 0;
+  margin: 8px 16px 32px 40px;
   font-weight: 400;
   @include m-theme() {
     color: themed($m-grey-300);
@@ -78,7 +78,7 @@ m-analytics__dashboard {
     }
   }
   .m-analyticsDashboard__description {
-    margin: 0 24px 24px 24px;
+    margin: 24px;
   }
 }
 
