--- a/src/app/modules/wallet/v2/components/rewards-popup/rewards-popup.component.scss
+++ b/src/app/modules/wallet/v2/components/rewards-popup/rewards-popup.component.scss
@@ -13,6 +13,7 @@ m-walletRewardsPopup {
     background-color: themed($m-white);
     color: themed($m-textColor--tertiary);
     box-shadow: 0 0 10px 0 rgba(themed($m-black), 0.1);
+    border: 1px solid themed($m-borderColor--primary);
   }
 
   .m-walletRewardsPopup__row {
@@ -22,15 +23,17 @@ m-walletRewardsPopup {
   }
 
   .m-walletRewardsPopup__metricsContainer {
-    margin: 14px 20px 18px 20px;
+    margin: 14px 20px;
     .m-walletRewardsPopup__row {
       margin-bottom: 5px;
     }
   }
 
   .m-walletRewardsPopup__totalScoreWrapper {
-    margin: 10px 20px 20px 20px;
-
+    padding: 14px 20px;
+    @include m-theme() {
+      box-shadow: 0px -2px 6px -2px rgba(themed($m-black), 0.2);
+    }
     span {
       font-size: 14px;
       line-height: 19px;
