--- a/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
@@ -33,12 +33,12 @@
             <ng-template ngSwitchCase="boost">
               <div class="m-walletTransactionsTable__typeWrapper--boost">
                 <i class="material-icons">trending_up</i
-                ><span>{{ getTypeLabel(tx.superType) }}ed Content</span>
+                ><span>{{ getTypeLabel(tx.type) }}ed Content</span>
               </div>
             </ng-template>
 
             <!-- PURCHASES -->
-            <ng-template ngSwitchCase="token">
+            <ng-template ngSwitchCase="purchase">
               <div class="m-walletTransactionsTable__typeWrapper--purchase">
                 <i class="material-icons">shopping_cart</i><span>Purchase</span>
               </div></ng-template
@@ -80,7 +80,7 @@
                   [src]="tx.otherUser.avatar"
                 />
                 <span
-                  >{{ getTypeLabel(tx.superType) }}
+                  >{{ getTypeLabel(tx.type) }}
                   {{ tx.otherUser.isSender ? 'from' : 'to' }}
                   <a
                     class="m-walletTransactionsTable__otherUserLink"
