--- a/src/app/modules/wallet/v2/tokens/onboarding/token-onboarding.component.scss
+++ b/src/app/modules/wallet/v2/tokens/onboarding/token-onboarding.component.scss
@@ -11,7 +11,7 @@ m-walletTokenOnboarding {
     justify-content: space-between;
     border-radius: 2px;
     @include m-theme() {
-      border: 1px solid themed($m-grey-50);
+      border: 1px solid themed($m-borderColor--primary);
     }
     a {
       text-decoration: underline;
@@ -22,7 +22,7 @@ m-walletTokenOnboarding {
         text-decoration: none;
         cursor: text;
         @include m-theme() {
-          color: themed($m-grey-800);
+          color: themed($m-textColor--primary);
         }
       }
     }
@@ -40,7 +40,7 @@ m-walletTokenOnboarding {
   }
   .m-walletTokenOnboardingStep--verifyPhone {
     @include m-theme() {
-      border-right: 1px solid themed($m-grey-50);
+      border-right: 1px solid themed($m-borderColor--primary);
     }
 
     .m-walletTokenOnboardingModal__view--verifyPhone {
@@ -53,7 +53,7 @@ m-walletTokenOnboarding {
     flex-flow: row nowrap;
     align-items: flex-start;
     @include m-theme() {
-      color: themed($m-grey-800);
+      color: themed($m-textColor--primary);
     }
     a {
       font-size: 14px;
@@ -63,7 +63,7 @@ m-walletTokenOnboarding {
         cursor: default;
         text-decoration: line-through;
         @include m-theme() {
-          color: themed($m-grey-200);
+          color: themed($m-textColor--tertiary);
         }
       }
     }
@@ -77,9 +77,9 @@ m-walletTokenOnboarding {
   .m-walletTokenOnboardingStep__desc {
     font-size: 13px;
     line-height: 18px;
-    margin-top: 6px;
+    margin: 6px 0 0 15px;
     @include m-theme() {
-      color: themed($m-grey-600);
+      color: themed($m-textColor--secondary);
     }
   }
 
@@ -93,11 +93,12 @@ m-walletTokenOnboarding {
     .m-walletTokenOnboardingStep--verifyPhone {
       @include m-theme() {
         border-right-width: 0px;
-        border-bottom: 1px solid themed($m-grey-50);
+        border-bottom: 1px solid themed($m-borderColor--primary);
       }
     }
     .m-walletTokenOnboardingStep__desc {
       padding-left: 16px;
+      margin-left: 0;
     }
   }
 }
