(fix): avatars not working for search

--- a/src/app/modules/discovery/feeds/feed-item.component.html
+++ b/src/app/modules/discovery/feeds/feed-item.component.html
@@ -9,7 +9,7 @@
         <div
           class="m-discoveryFeedItem__avatar"
           [style.background-image]="
-            'url(' + cdnUrl + '/icon/' + entity.guid + ')'
+            'url(' + cdnUrl + 'icon/' + entity.guid + ')'
           "
         ></div>
         <div class="m-discoveryFeedItem__body">
