(chore): boost console should not be opening in new tab

--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -74,7 +74,7 @@
       class="m-dropdownList__item m-userMenuDropdown__item"
       (click)="closeMenu()"
     >
-      <a target="_blank" routerLink="/boost/console">
+      <a routerLink="/boost/console">
         <span i18n>Boost Console</span>
       </a>
     </li>
